<resources>
    <string name="app_name">Speak Timer</string>
    <string name="app_name_timer">Speak Timer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Samsung One Toast Master</string>
    <string name="nav_header_subtitle">www.toastmasters.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_test_mode">Change to test mode</string>
    <string name="action_normal_mode">Change to normal mode</string>
    <string name="action_show_report">Timer\'s report</string>
    <string name="action_settings">Settings</string>

    <string name="menu_meeting">Meeting</string>
    <string name="menu_roles">Role Guide</string>
    <string name="menu_timer">Speak Timer</string>
    <string name="menu_vote">Vote</string>
    <string name="menu_stats">Statistics</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="green">Green</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_duplicate">Duplicate</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_roles">Sort by roles</string>
    <string name="action_sort_by_creation">Sort by creation time</string>

    <string name="buffer_time_policy_default">Speeches of up to 2 minutes are given a 15-second buffer time.
        and speeches over 2 minutes are given a 30-second buffer time.
    </string>

    <string name="green_card_show_option_show_exactly_judge_early">
        Show green card at the given time exactly but judge the qualification considering buffer time.
    </string>
    <string name="green_card_show_option_show_exactly_judge_exactly">
        Show green card at the given time exactly and judge the qualification without considering buffer time.
    </string>
    <string name="green_card_show_option_show_early_judge_early">
        Show green card earlier than the original tim by the buffer time.
    </string>
    <string name="remaining_notification">This is remaining time.\nTouch to view elapsed time.</string>
</resources>